updated scroll example

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://kit.fontawesome.com/544bbc5cdf.js" crossorigin="anonymous"></script>
     <meta
       name="description"
-      content="Portfolio of Robert Marsh"
+      content="Robert Marsh: Coding Portfolio"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
